# bench-hash-in-snark

./: .gitignore  Cargo.toml  README.md  bench.sh  render_table.py
bench/: Cargo.toml
bench/src/: criterion.rs  lib.rs  util.rs
binius/: Cargo.toml
binius/benches/: binius.rs
binius/src/: hash.rs  lib.rs  main.rs
binius/src/circuit/: groestl.rs  keccak.rs
binius/src/hash/: groestl.rs  keccak.rs  vision.rs
expander/: Cargo.toml
expander/benches/: expander.rs
expander/circuit/: gf2_keccak.go  go.mod  keccak.go  m31_keccak.go  m31_poseidon.go
expander/circuit/m31_poseidon/: 1.txt  11.txt  12.txt  13.txt  14.txt  16.txt  2.txt  3.txt  4.txt  6.txt  7.txt  9.txt
expander/src/: circuit.rs  lib.rs  main.rs
expander/src/circuit/: gf2_keccak.rs  m31_keccak.rs  m31_poseidon.rs
hashcaster/: Cargo.toml
hashcaster/benches/: hashcaster.rs
hashcaster/src/: hash.rs  lib.rs  main.rs  util.rs
hashcaster/src/hash/: keccak.rs
plonky3/: Cargo.toml
plonky3/benches/: plonky3.rs
plonky3/src/: circuit.rs  config.rs  lib.rs  main.rs
plonky3/src/circuit/: blake3.rs  keccak.rs  koala_bear_poseidon2.rs
plonky3/src/config/: keccak_mt.rs
stwo/: Cargo.toml
stwo/benches/: stwo.rs
stwo/src/: circuit.rs  lib.rs  main.rs
stwo/src/hash/: blake2s.rs  poseidon2.rs
