[package]
name = "bench-binius"
version = "0.1.0"
edition = "2021"

[dependencies]
bench = { path = "../bench" }
bincode = "1.3"
clap = { version = "4.5.21", features = ["derive"] }
criterion = "0.5.1"
rand = "0.8.5"

binius_circuits = { git = "https://github.com/IrreducibleOSS/binius", rev = "9791abc" }
binius_core = { git = "https://github.com/IrreducibleOSS/binius", rev = "9791abc" }
binius_field = { git = "https://github.com/IrreducibleOSS/binius", rev = "9791abc" }
binius_hal = { git = "https://github.com/IrreducibleOSS/binius", rev = "9791abc" }
binius_hash = { git = "https://github.com/IrreducibleOSS/binius", rev = "9791abc" }
binius_macros = { git = "https://github.com/IrreducibleOSS/binius", rev = "9791abc" }
binius_math = { git = "https://github.com/IrreducibleOSS/binius", rev = "9791abc" }
binius_utils = { git = "https://github.com/IrreducibleOSS/binius", rev = "9791abc", features = ["tracing"] }
bumpalo = { version = "3.16.0", features = ["collections"] }
groestl_crypto = { package = "groestl", version = "0.10.1" }

[profile.release]
lto = "fat"
codegen-units = 1

[[bench]]
name = "binius"
harness = false

[patch."https://gitlab.com/IrreducibleOSS/tracing-profile.git"]
tracing-profile = { git = "https://gitlab.com/IrreducibleOSS//tracing-profile.git", rev = "6d986ca1" }
