[package]
name = "bench-binius"
version = "0.1.0"
edition = "2021"

[dependencies]
bench = { path = "../bench" }
bincode = "1.3"
clap = { version = "4.5.21", features = ["derive"] }
criterion = "0.5.1"
rand = "0.9.2"

binius_compute = { git = "https://github.com/IrreducibleOSS/binius", rev = "1b09443" }
binius_core = { git = "https://github.com/IrreducibleOSS/binius", rev = "1b09443" }
binius_fast_compute = { git = "https://github.com/IrreducibleOSS/binius", rev = "1b09443" }
binius_field = { git = "https://github.com/IrreducibleOSS/binius", rev = "1b09443" }
binius_hal = { git = "https://github.com/IrreducibleOSS/binius", rev = "1b09443" }
binius_hash = { git = "https://github.com/IrreducibleOSS/binius", rev = "1b09443" }
binius_m3 = { git = "https://github.com/IrreducibleOSS/binius", rev = "1b09443" }
binius_macros = { git = "https://github.com/IrreducibleOSS/binius", rev = "1b09443" }
binius_math = { git = "https://github.com/IrreducibleOSS/binius", rev = "1b09443" }
binius_utils = { git = "https://github.com/IrreducibleOSS/binius", rev = "1b09443" }
bumpalo = { version = "3.16.0", features = ["collections"] }
groestl_crypto = { package = "groestl", version = "0.10.1" }
tracing-profile = "0.10.1"
anyhow = "1.0.98"

[profile.release]
lto = "fat"
codegen-units = 1

[[bench]]
name = "binius"
harness = false
