[package]
name = "bench-hashcaster"
version = "0.1.0"
edition = "2021"

[dependencies]
bench = { path = "../bench" }
bincode = "1.3"
clap = { version = "4.5.21", features = ["derive"] }
criterion = "0.5.1"
rand = "0.8.5"

hashcaster = { git = "https://github.com/han0110/hashcaster", branch = "bench" }
itertools = "0.13.0"
num-traits = "0.2.19"
p3-challenger = { git = "https://github.com/Plonky3/Plonky3", rev = "abdc2a0" }
p3-keccak = { git = "https://github.com/Plonky3/Plonky3", rev = "abdc2a0" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3", rev = "abdc2a0" }
serde = { version = "1.0.215", features = ["derive"] }

[profile.release]
lto = "fat"

[[bench]]
name = "hashcaster"
harness = false
