[package]
name = "bench-plonky3"
version = "0.1.0"
edition = "2021"

[dependencies]
bench = { path = "../bench" }
bincode = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true }

p3-air = { git = "https://github.com/Plonky3/Plonky3", rev = "abdc2a0" }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3", rev = "abdc2a0" }
p3-blake3-air = { git = "https://github.com/Plonky3/Plonky3", rev = "abdc2a0" }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3", rev = "abdc2a0" }
p3-commit = { git = "https://github.com/Plonky3/Plonky3", rev = "abdc2a0" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3", rev = "abdc2a0" }
p3-field = { git = "https://github.com/Plonky3/Plonky3", rev = "abdc2a0" }
p3-fri = { git = "https://github.com/Plonky3/Plonky3", rev = "abdc2a0" }
p3-keccak = { git = "https://github.com/Plonky3/Plonky3", rev = "abdc2a0" }
p3-keccak-air = { git = "https://github.com/Plonky3/Plonky3", rev = "abdc2a0" }
p3-koala-bear = { git = "https://github.com/Plonky3/Plonky3", rev = "abdc2a0" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3", rev = "abdc2a0" }
p3-maybe-rayon = { git = "https://github.com/Plonky3/Plonky3", rev = "abdc2a0", features = ["parallel"] }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3", rev = "abdc2a0" }
p3-monty-31 = { git = "https://github.com/Plonky3/Plonky3", rev = "abdc2a0" }
p3-poseidon2-air = { git = "https://github.com/Plonky3/Plonky3", rev = "abdc2a0" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3", rev = "abdc2a0" }
p3-uni-stark = { git = "https://github.com/Plonky3/Plonky3", rev = "abdc2a0" }

[[bench]]
name = "plonky3"
harness = false
