[package]
name = "bench-plonky3"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[dependencies]
bench = { path = "../bench" }
bincode = "1.3"
clap = { version = "4.5.21", features = ["derive"] }
criterion = "0.5.1"
rand = "0.9.2"

p3-air = { git = "https://github.com/Plonky3/Plonky3", rev = "bd6fb41" }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3", rev = "bd6fb41" }
p3-blake3-air = { git = "https://github.com/Plonky3/Plonky3", rev = "bd6fb41" }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3", rev = "bd6fb41" }
p3-commit = { git = "https://github.com/Plonky3/Plonky3", rev = "bd6fb41" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3", rev = "bd6fb41" }
p3-field = { git = "https://github.com/Plonky3/Plonky3", rev = "bd6fb41" }
p3-fri = { git = "https://github.com/Plonky3/Plonky3", rev = "bd6fb41" }
p3-keccak = { git = "https://github.com/Plonky3/Plonky3", rev = "bd6fb41" }
p3-keccak-air = { git = "https://github.com/Plonky3/Plonky3", rev = "bd6fb41" }
p3-koala-bear = { git = "https://github.com/Plonky3/Plonky3", rev = "bd6fb41" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3", rev = "bd6fb41" }
p3-maybe-rayon = { git = "https://github.com/Plonky3/Plonky3", rev = "bd6fb41", features = ["parallel"] }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3", rev = "bd6fb41" }
p3-monty-31 = { git = "https://github.com/Plonky3/Plonky3", rev = "bd6fb41" }
p3-poseidon2-air = { git = "https://github.com/Plonky3/Plonky3", rev = "bd6fb41" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3", rev = "bd6fb41" }
p3-uni-stark = { git = "https://github.com/Plonky3/Plonky3", rev = "bd6fb41" }

tracing-forest = { version = "0.1.6", features = ["smallvec"] }
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }

[profile.release]
lto = "fat"
codegen-units = 1

[[bench]]
name = "plonky3"
harness = false
