[package]
name = "bench-stwo"
version = "0.1.0"
edition = "2021"

[dependencies]
bench = { path = "../bench" }
bincode = "1.3"
clap = { version = "4.5.21", features = ["derive"] }
criterion = "0.5.1"
rand = "0.8.5"

stwo-prover = { git = "https://github.com/han0110/stwo", branch = "bench", features = ["parallel"] }

[profile.release]
lto = "fat"

[[bench]]
name = "stwo"
harness = false
