[package]
name = "bench-stwo"
version = "0.1.0"
edition = "2021"

[dependencies]
bench = { path = "../bench" }
bincode = "1.3"
clap = { version = "4.5.21", features = ["derive"] }
criterion = "0.5.1"
rand = "0.9.2"

stwo = { git = "https://github.com/han0110/stwo", branch = "bench", features = ["parallel"] }
stwo-constraint-framework = { git = "https://github.com/han0110/stwo", branch = "bench" }
stwo-examples = { git = "https://github.com/han0110/stwo", branch = "bench" }

[profile.release]
lto = "fat"
codegen-units = 1

[[bench]]
name = "stwo"
harness = false
